src/main/java/syntactic/test/failing/missingFnKeyword.ru
impl Hola {
    st capo() -> void {}
}

/? ERROR: SINTACTICO
/? | NUMERO DE LINEA: | NUMERO DE COLUMNA: | DESCRIPCION: |
/? | 2 | 8 | Se esperaba [KW_FN] pero se encontró ID: capo |